# ironclaw

./: .env.example  CHANGELOG.md  Cargo.toml  FEATURE_PARITY.md  README.md  ironclaw.zsh
.github/scripts/: create-labels.sh
.github/workflows/: release.yml  test.yml
channels-src/discord/: discord.capabilities.json
channels-src/matrix/: Cargo.toml  build.sh  matrix.capabilities.json
channels-src/matrix/src/: lib.rs  lib.rs.bak
channels-src/telegram/src/: lib.rs
docs/: matrix-e2ee.md
registry/channels/: discord.json  slack.json  telegram.json  whatsapp.json
registry/tools/: okta.json  slack.json  telegram.json
src/: bootstrap.rs  error.rs  lib.rs  main.rs  settings.rs  testing.rs
src/agent/: agent_loop.rs  commands.rs  compaction.rs  dispatcher.rs  heartbeat.rs  thread_ops.rs  worker.rs
src/channels/: manager.rs  repl.rs
src/channels/wasm/: bundled.rs  capabilities.rs  host.rs  loader.rs  router.rs  schema.rs  wrapper.rs
src/cli/: completion.rs  mod.rs  oauth_defaults.rs  tool.rs
src/config/: llm.rs  mod.rs
src/extensions/: discovery.rs  manager.rs  mod.rs  registry.rs
src/llm/: circuit_breaker.rs  failover.rs  mod.rs  nearai_chat.rs  reasoning.rs  rig_adapter.rs  session.rs
src/matrix/: mod.rs
src/registry/: catalog.rs  installer.rs  manifest.rs
src/safety/: mod.rs
src/secrets/: store.rs
src/setup/: README.md  prompts.rs  wizard.rs
src/skills/: registry.rs
src/tools/: mod.rs  registry.rs  tool.rs
src/workspace/: mod.rs
tests/: matrix_e2ee_integration.rs  openai_compat_integration.rs  ws_gateway_integration.rs
(+32 files in other folders)
