[package]
name = "matrix-channel"
version = "0.1.0"
edition = "2021"
description = "Matrix Client-Server API channel for IronClaw"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = "0.36"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", default-features = false, features = ["std"] }
rand = "0.8"

[workspace]

[profile.release]
opt-level = "s"
lto = true
strip = true
codegen-units = 1
